z-index in PostOptionsPopUp fix

--- a/src/app/post/[...post_id]/components/post/PostContent.module.scss
+++ b/src/app/post/[...post_id]/components/post/PostContent.module.scss
@@ -87,7 +87,7 @@
   position: absolute;
   right: 16px;
   top: 20px;
-  z-index: 35;
+  z-index: 21;
 }
 
 .post-image {
